Add Maven dependencies
Configure surefire plugin to handle modules